--- a/index.html
+++ b/index.html
@@ -3,33 +3,47 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/normalize.css">
   <title>Frontend Mentor | Profile card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  Victor Crest
-  26
-  London
-
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
+  <div class="content">
+    <img class="img-top" src="./images/bg-pattern-top.svg" alt="Image top" />
+    <div class="card">
+      <div class="card__header">
+        <img class="card__img" src="./images/bg-pattern-card.svg" alt="Image of banner" />
+        <div class="card__content-img">
+          <img class="card__img-profile" src="./images/image-victor.jpg" alt="Image of profile" />
+        </div>
+      </div>
+      <div class="card__body">
+        <div class="card__info">
+          <p class="card__name">Victor Crest<span class="card__age">26</span></p>
+          <p class="card__live">London</p>
+        </div>
+        <div class="card__follow">
+          <div class="card__info-follow">
+            <p class="card__numbers">80K</p>
+            <p class="card__text">Followers</p>
+          </div>
+          <div class="card__info-follow">
+            <p class="card__numbers">803K</p>
+            <p class="card__text">Likes</p>
+          </div>   
+          <div class="card__info-follow">
+            <p class="card__numbers">1.4K</p>
+            <p class="card__text">Photos</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <img class="img-bottom" src="./images/bg-pattern-bottom.svg" alt="Image bottom" />
+  </div>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    <p class="">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://www.linkedin.com/in/alfredo-cu/">Alfredo Carreón Urbano</a>.</p>
   </div>
 </body>
 </html>
